@@ -173,6 +173,10 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <skip>false</skip>
+                            <systemPropertyVariables combine.children="append">
+                                <server.jvm.args>${server.jvm.args}</server.jvm.args>
+                                <node.address>127.0.0.1</node.address>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -259,28 +263,17 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-test</id>
-                  <phase>test</phase>
-                  <goals>
-                    <goal>test</goal>
-                  </goals>
-                  <configuration combine.self="override">
-                    <forkMode>pertest</forkMode>
-                    <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-                    <systemPropertyVariables combine.children="append">
-                        <server.jvm.args>${server.jvm.args}</server.jvm.args>
-                        <node.address>127.0.0.1</node.address>
-                    </systemPropertyVariables>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-                  </configuration>
-                </execution>
-              </executions>
+              <configuration combine.self="append">
+                  <argLine>--add-exports-private=java.base/java.io=ALL-UNNAMED</argLine>
+              </configuration>
             </plugin>
           </plugins>
         </build>
+        <properties>
+            <server.jvm.args>
+                ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
+            </server.jvm.args>
+        </properties>
       </profile>
     </profiles>
 </project>
